--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,33 @@ main{
     box-shadow: -2px 2px 10px black;
 }
 
+#todays-weather{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.day-header{
+    font-size: 50px;
+    text-align: center;
+    width: 100%;
+    background: rgba(113, 180, 201, 0.21);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border: 1px solid rgba(113, 180, 201, 0.3);
+}
+
+.weather-info {
+    text-align: center;
+    font-size: 30px;
+    background-color: rgba(31, 105, 109, 0.48);
+    width: 50%;
+    border-radius: 16px;
+    box-shadow: -2px 2px 10px black;
+}
 
 
 
