--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,7 @@ border: 1px solid rgba(113, 180, 201, 0.3);
     width: 50%;
     border-radius: 16px;
     box-shadow: -2px 2px 10px black;
+    margin-top: 10px;
 }
 
 
