--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,12 +128,29 @@ border: 1px solid rgba(113, 180, 201, 0.3);
 .weather-info {
     text-align: center;
     font-size: 30px;
-    background-color: rgba(31, 105, 109, 0.48);
+    background-color: rgba(39, 134, 139, 0.48);
     width: 50%;
     border-radius: 16px;
     box-shadow: -2px 2px 10px black;
     margin-top: 10px;
 }
 
+#five-day-forecast {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.cards{
+    width: 180px;
+    height: 180px;
+    text-align: center;
+    font-size: 20px;
+    background-color: rgba(51, 177, 184, 0.358);
+    border-radius: 16px;
+    border: 1px solid rgba(113, 180, 201, 0.3);
+    box-shadow: -2px 2px 10px black;
+}
 
 
