--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,11 +45,11 @@ main{
 
 #todays-weather{
     width: 80vw;
-    height: 50vh;
+    height: 40vh;
 }
 
 #five-day-forecast{
-    height: 50vh;
+    height: 60vh;
     width: 80vw;
 }
 
@@ -118,11 +118,11 @@ main{
     text-align: center;
     width: 100%;
     background: rgba(113, 180, 201, 0.21);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-border: 1px solid rgba(113, 180, 201, 0.3);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(113, 180, 201, 0.3);
 }
 
 .weather-info {
@@ -138,19 +138,34 @@ border: 1px solid rgba(113, 180, 201, 0.3);
 #five-day-forecast {
     display: flex;
     gap: 15px;
-    justify-content: center;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .cards{
     width: 180px;
-    height: 180px;
+    height: 230px;
     text-align: center;
     font-size: 20px;
     background-color: rgba(51, 177, 184, 0.358);
     border-radius: 16px;
     border: 1px solid rgba(113, 180, 201, 0.3);
     box-shadow: -2px 2px 10px black;
+}
+
+.cards p {
+    border-bottom: 1px solid rgb(113, 180, 201);
+    margin: 10px;
+    
+}
+
+#top-image{
+    width:70px;
+    height: 50px;
+    background-color: rgba(51, 177, 184, 0.358);
+    border-radius: 50%;
+    
+    
 }
 
 
