--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,11 +170,13 @@ main{
 
 .search-history-btn{
     text-align: center;
+    color: black;
     width: 80%;
+    height: 20px;
     margin-left: 25px;
     margin-top: 6px;
     border-radius: 16px;
-    background-color: rgba(51, 177, 184, 0.158);
+    background-color: rgba(255, 255, 255, 0.461);
     box-shadow: -2px 2px 5px black;
 }
 
